# make-fx-rates

./: README.md  __main__.py  currency_rates.json  fx_rates.py  pyproject.toml
